Finish fixing up removed packages

--- a/.azurepipelines/templates/pr-gate-build-job.yml
+++ b/.azurepipelines/templates/pr-gate-build-job.yml
@@ -23,7 +23,7 @@ jobs:
   strategy:
     matrix:
       TARGET_Ipmi:
-        Build.Pkgs: 'IpmiFeaturePkg,BeepDebugFeaturePkg,PostCodeDebugFeaturePkg,Usb3DebugFeaturePkg'
+        Build.Pkgs: 'IpmiFeaturePkg'
         Build.Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
 
   workspace:
