--- a/.azurepipelines/Windows-VS2022.yml
+++ b/.azurepipelines/Windows-VS2022.yml
@@ -23,6 +23,6 @@ pr:
 jobs:
 - template: templates/pr-gate-build-job.yml
   parameters:
-    tool_chain_tag: 'VS2019'
-    vm_image: 'windows-latest'
+    tool_chain_tag: 'VS2022'
+    vm_image: 'windows-2022'
     arch_list: "IA32,X64"
