--- a/.azurepipelines/templates/pr-gate-steps.yml
+++ b/.azurepipelines/templates/pr-gate-steps.yml
@@ -63,25 +63,10 @@ steps:
 
 # MU_CHANGE - Add MarkdownLint
 # install markdownlint check prereqs
-# TEMP: Remove Markdown lint since we don't own these docs.
-#- template: markdownlint-check-prereq-steps.yml
+- template: markdownlint-check-prereq-steps.yml
 
 # Build repo
 # MU_CHANGE - We use CI dependencies as well as submodules.
-- task: CmdLine@1
-  displayName: Setup ${{ parameters.build_pkgs }} ${{ parameters.build_archs}}
-  inputs:
-    filename: stuart_ci_setup
-    arguments: -c .pytool/CISettings.py -p $(pkgs_to_build) --force-git -t ${{ parameters.build_targets}} -a ${{ parameters.build_archs}} TOOL_CHAIN_TAG=${{ parameters.tool_chain_tag}}
-  condition: and(gt(variables.pkg_count, 0), succeeded())
-
-- task: CmdLine@1
-  displayName: Setup ${{ parameters.build_pkgs }} ${{ parameters.build_archs}}
-  inputs:
-    filename: stuart_setup
-    arguments: -c .pytool/CISettings.py -p $(pkgs_to_build) -t ${{ parameters.build_targets}} -a ${{ parameters.build_archs}} TOOL_CHAIN_TAG=${{ parameters.tool_chain_tag}}
-  condition: and(gt(variables.pkg_count, 0), succeeded())
-
 - task: CmdLine@1
   displayName: Update ${{ parameters.build_pkgs }} ${{ parameters.build_archs}}
   inputs:
