--- a/.azurepipelines/Windows-VS2022.yml
+++ b/.azurepipelines/Windows-VS2022.yml
@@ -6,26 +6,23 @@
 ##
 # MU_CHANGE [BEGIN]
 trigger:
-- dev/*
-- release/*
+- main
 
 schedules:
 - cron: "0 8 * * 0,3"   # Sun/Wed at 1AM Pacific
   displayName: Sun/Wed Build
   branches:
     include:
-    - dev/*
-    - release/*
+    - main
   always: true          # Always build, even if no changes
 
 pr:
-- dev/*
-- release/*
+- main
 # MU_CHANGE [END]
 
 jobs:
 - template: templates/pr-gate-build-job.yml
   parameters:
-    tool_chain_tag: 'VS2019'
-    vm_image: 'windows-latest'
+    tool_chain_tag: 'VS2022'
+    vm_image: 'windows-2022'
     arch_list: "IA32,X64"
