--- a/.azurepipelines/Windows-VS2022.yml
+++ b/.azurepipelines/Windows-VS2022.yml
@@ -25,4 +25,4 @@ jobs:
   parameters:
     tool_chain_tag: 'VS2022'
     vm_image: 'windows-2022'
-    arch_list: "IA32,X64"
+    arch_list: "IA32,X64,AARCH64"
