--- a/.azurepipelines/Windows-VS.yml
+++ b/.azurepipelines/Windows-VS.yml
@@ -1,8 +1,7 @@
 ## @file
-# Azure Pipeline build file for a build using ubuntu and GCC5
+# Azure Pipeline build file for a build using Windows and Visual Studio
 #
 # Copyright (c) Microsoft Corporation.
-# Copyright (c) 2020, Hewlett Packard Enterprise Development LP. All rights reserved.<BR>
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 
@@ -21,7 +20,7 @@ pr:
 - main
 
 schedules:
-- cron: "30 9 * * 0,3"  # Sun/Wed at 2:30AM Pacific
+- cron: "0 8 * * 0,3"   # Sun/Wed at 1AM Pacific
   displayName: Sun/Wed Build
   branches:
     include:
@@ -34,10 +33,7 @@ jobs:
     arch_list: IA32,X64,AARCH64
     do_ci_build: true
     do_ci_setup: false
-    extra_steps:
-    - script: sudo apt-get install mingw-w64
-      displayName: Install Windows Resource Compiler for Linux
     packages: IpmiFeaturePkg
     target_list: DEBUG,RELEASE,NO-TARGET,NOOPT
-    tool_chain_tag: GCC5
-    vm_image: ubuntu-latest
+    tool_chain_tag: VS2022
+    vm_image: windows-2022
