PR Update: Include AARCH64 in Windows VS build

--- a/.azurepipelines/Windows-VS.yml
+++ b/.azurepipelines/Windows-VS.yml
@@ -14,7 +14,7 @@ resources:
       ref: main
 
 variables:
-- group: architectures-x86-64
+- group: architectures-arm64-x86-64
 - group: tool-chain-windows-visual-studio-latest
 
 jobs:
