--- a/.azurepipelines/Windows-VS.yml
+++ b/.azurepipelines/Windows-VS.yml
@@ -16,8 +16,8 @@ resources:
     - repository: mu_devops
       type: github
       endpoint: microsoft
-      name: microsoft/mu_devops
-      ref: refs/tags/v2.2.0
+      name: cfernald/mu_devops
+      ref: code_cov
 
 variables:
 - group: architectures-arm64-x86-64
