--- a/.azurepipelines/Ubuntu-GCC5.yml
+++ b/.azurepipelines/Ubuntu-GCC5.yml
@@ -11,27 +11,23 @@
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 
-resources:
-  repositories:
-    - repository: mu_devops
-      type: github
-      endpoint: microsoft
-      name: microsoft/mu_devops
-      ref: refs/tags/v2.5.1
-
 variables:
-- group: architectures-arm64-x86-64
+- group: architectures-arm-64-x86-64
 - group: tool-chain-ubuntu-gcc
 
-jobs:
-- template: Jobs/PrGate.yml@mu_devops
+extends:
+  template: MuDevOpsSync.yml
   parameters:
-    arch_list: $(arch_list)
-    do_ci_build: true
+    do_ci_build: true	
     do_ci_setup: true
-    packages: IpmiFeaturePkg
-    target_list: DEBUG,RELEASE,NO-TARGET,NOOPT
-    tool_chain_tag: $(tool_chain_tag)
-    vm_image: $(vm_image)
     container_build: true
-    linux_container_image: ghcr.io/tianocore/containers/fedora-37-build:3b3eb8f
+    os_type: Linux
+    build_matrix:
+      TARGET_IPMI:
+        Pkgs: 'IpmiFeaturePkg'
+        Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        SelfHostAgent: false
+      TARGET_IPMI_ARM:
+        Pkgs: 'IpmiFeaturePkg'
+        Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        SelfHostAgent: true
