--- a/.azurepipelines/Ubuntu-GCC5.yml
+++ b/.azurepipelines/Ubuntu-GCC5.yml
@@ -26,8 +26,10 @@ extends:
       TARGET_IPMI:
         Pkgs: 'IpmiFeaturePkg'
         Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
         SelfHostAgent: false
       TARGET_IPMI_ARM:
         Pkgs: 'IpmiFeaturePkg'
         Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
         SelfHostAgent: true
