--- a/.azurepipelines/Windows-VS.yml
+++ b/.azurepipelines/Windows-VS.yml
@@ -25,8 +25,10 @@ extends:
       TARGET_IPMI:
         Pkgs: 'IpmiFeaturePkg'
         Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
         SelfHostAgent: false
       TARGET_IPMI_ARM:
         Pkgs: 'IpmiFeaturePkg'
         Targets: 'DEBUG,RELEASE,NO-TARGET,NOOPT'
+        ArchList: $(arch_list)
         SelfHostAgent: true
