--- a/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
+++ b/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
@@ -66,7 +66,7 @@
     },
     "SpellCheck": {
         "AuditOnly": False,
-        "ExtendWords": [], # words to extend to the dictionary for this package   
+        "ExtendWords": ["sapic"], # words to extend to the dictionary for this package
         "IgnoreStandardPaths": ["*.c", "*.asm", "*.h", "*.nasm", "*.s", "*.asl", "*.inf", "*.fdf"],   # Standard Plugin defined paths that should be ignore
         "AdditionalIncludePaths": [] # Additional paths to spell check (wildcards supported)
     },
