ci.yaml: add PrEval entry
Adds a PrEval entry to all ci.yaml files to enable the new PrEval Policy
5.

--- a/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
+++ b/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
@@ -8,6 +8,9 @@
 ##
 
 {
+    "PrEval": {
+        "DscPath": "IpmiFeaturePkg.dsc",
+    },
     "LicenseCheck": {
         "IgnoreFiles": []
     },
