--- a/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
+++ b/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
@@ -38,6 +38,7 @@
         "AcceptableDependencies": [
             "MdePkg/MdePkg.dec",
             "MdeModulePkg/MdeModulePkg.dec",
+            "PolicyServicePkg/PolicyServicePkg.dec",
             "IpmiFeaturePkg/IpmiFeaturePkg.dec"
         ],
         # For host based unit tests
