--- a/.azurepipelines/Ubuntu-GCC5.yml
+++ b/.azurepipelines/Ubuntu-GCC5.yml
@@ -14,6 +14,7 @@
 variables:
 - group: architectures-arm64-x86-64
 - group: tool-chain-ubuntu-gcc
+- group: coverage
 
 extends:
   template: MuDevOpsWrapper.yml
