--- a/.azurepipelines/Windows-VS.yml
+++ b/.azurepipelines/Windows-VS.yml
@@ -14,6 +14,7 @@
 variables:
 - group: architectures-arm64-x86-64
 - group: tool-chain-windows-visual-studio-latest
+- group: coverage
 
 extends:
   template: MuDevOpsWrapper.yml
