--- a/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
+++ b/IpmiFeaturePkg/IpmiFeaturePkg.ci.yaml
@@ -39,7 +39,8 @@
             "MdePkg/MdePkg.dec",
             "MdeModulePkg/MdeModulePkg.dec",
             "PolicyServicePkg/PolicyServicePkg.dec",
-            "IpmiFeaturePkg/IpmiFeaturePkg.dec"
+            "IpmiFeaturePkg/IpmiFeaturePkg.dec",
+            "StandaloneMmPkg/StandaloneMmPkg.dec"
         ],
         # For host based unit tests
         "AcceptableDependencies-HOST_APPLICATION":[
